--- a/docroot/modules/custom/verathon_bflex_calculator/templates/form--verathon-bflex-calculator-verathon-bflex-calculator.html.twig
+++ b/docroot/modules/custom/verathon_bflex_calculator/templates/form--verathon-bflex-calculator-verathon-bflex-calculator.html.twig
@@ -1,5 +1,6 @@
-<div id="bflex-calculator">
-
+<form {{attributes}}><div id="bflex-calculator">
+    {{form.form_token}}
+    {{form.form_build_id}}
     <div id="hero" class="blueBackground">
             <div class="container">
                 <div class="row">
@@ -318,3 +319,4 @@
 </div>
 </div>
     </div>
+</form>
