--- a/docroot/modules/custom/verathon_bflex_calculator/templates/form--verathon-bflex-calculator-verathon-bflex-calculator.html.twig
+++ b/docroot/modules/custom/verathon_bflex_calculator/templates/form--verathon-bflex-calculator-verathon-bflex-calculator.html.twig
@@ -97,9 +97,7 @@
                   </div>
                 </div>
                 <div class="error" id="facilityName_textField_1_textfieldError">Please enter the name of your facility.</div>
-                <div
-                  class="row">
-                  {# <input type="text" name="facility_name" placeholder="Enter Facility Name Here" required="required" maxlength="200" id="facilityName_textField_1_textField" class="textField"> #}
+                <div class="row">
                   {{element.facility_name}}
                 </div>
               </div>
@@ -107,14 +105,12 @@
                 <div class="row">
                   <div class="heading">
                     <label for="total_annual_bronchoscopy_procedures" class="label">{{config.total_annual_bronchoscopy_procedures_label}}</label>
-
                   </div>
                 </div>
                 <div class="error" id="bronchoscopyProcedures_slider_1_textfieldError"></div>
                 <div class="row">
                   <div class="column1">
                     <div>
-                      {# <input type="range" id="bronchoscopyProcedures_slider_1_slider" class="slider" min="1" max="3000" value="3000" step="1"> #}
                       {{element.total_annual_bronchoscopy_procedures}}
                     </div>
                     <div class="sliderMinMax">
@@ -145,14 +141,12 @@
                 <div class="row">
                   <div class="heading">
                     <label for="number_of_procedures_that_could_be_performed_with_single-use_bronchoscopes" class="label">{{config.procedures_count_single_usage_label}}</label>
-
                   </div>
                 </div>
                 <div class="error" id="numberOfProcedures_slider_1_textfieldError"></div>
                 <div class="row">
                   <div class="column1">
                     <div>
-                      {# <input type="range" id="numberOfProcedures_slider_1_slider" class="slider" min="1" max="3000" value="2250" step="1"> #}
                       {{element.procedures_count_single_usage}}
                     </div>
                     <div class="sliderMinMax">
@@ -173,7 +167,6 @@
                 <div class="row">
                   <div class="heading">
                     <label for="your_bflex™_bronchoscope_price">{{config.your_bronchoscope_price_label}}</label>
-
                   </div>
                 </div>
                 <div class="error" id="broncoscopyPrice_numberField_1_textfieldError"></div>
@@ -454,10 +447,10 @@
             <h1>Your Cost-Comparison Results</h1>
             <p>
               Here’s how your current costs for reusables stack up against sterile single-use
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          bronchoscopes. By integrating BFlex™ with your inventory, you can help to reduce preventable
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          infections from cross contamination and save time on repairs and reprocessing.
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      bronchoscopes. By integrating BFlex™ with your inventory, you can help to reduce preventable
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      infections from cross contamination and save time on repairs and reprocessing.
               <span class="boldText">This comparison is conservative. It omits the capital acquisition
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              costs and operational budgets associated with reusable bronchoscopes.<span></span>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              costs and operational budgets associated with reusable bronchoscopes.<span></span>
               </span>
             </p>
           </div>
@@ -999,7 +992,7 @@
             <p class="value float">${{calculation.current_costs.reprocessing.total_annual_reprocessing_costs}}</p>
           </div>
         </div>
-
+        {{dump(calculation)}}
 
       </div>
       <!-- WITH -->
@@ -1069,7 +1062,8 @@
             <p>Cost per infection</p>
           </div>
           <div class="column5">
-            <p class="value float">${{calculation.current_costs.treating_infections.annual_costs}}</p>
+            <p class="value float">${{calculation.cost_per_infection}}</p>
+
           </div>
         </div>
         <div class="row">
@@ -1085,7 +1079,7 @@
             <p>Cost per infection</p>
           </div>
           <div class="column5">
-            <p class="value float">${{calculation.reducing_costs.treating_infections.annual_costs}}</p>
+            <p class="value float">${{calculation.cost_per_infection}}</p>
 
           </div>
         </div>
@@ -1105,7 +1099,8 @@
             <p>Annual cost</p>
           </div>
           <div class="column5">
-            <p class="value float">${{calculation.current_costs.treating_infections.total_costs}}</p>
+            <p class="value float">${{calculation.current_costs.treating_infections.annual_costs}}</p>
+
           </div>
         </div>
       </div>
@@ -1116,7 +1111,7 @@
             <p>Annual cost</p>
           </div>
           <div class="column5">
-            <p class="value float">${{calculation.reducing_costs.treating_infections.total_costs}}</p>
+            <p class="value float">${{calculation.reducing_costs.treating_infections.annual_costs}}</p>
 
           </div>
         </div>
@@ -1133,7 +1128,8 @@
             <p>Annual Estimated Operating Costs</p>
           </div>
           <div class="column5 ">
-            <p class="value float">$961,744</p>
+            <p class="value float">${{calculation.current_costs.total_costs}}</p>
+
           </div>
         </div>
       </div>
@@ -1144,7 +1140,8 @@
             <p>Annual Estimated Operating Costs</p>
           </div>
           <div class="column5">
-            <p class="value float">$485,654</p>
+            <p class="value float">${{calculation.reducing_costs.total_costs}}</p>
+
           </div>
         </div>
       </div>
