--- a/docroot/modules/custom/verathon_bflex_calculator/css/verathon-bflex-calculator.css
+++ b/docroot/modules/custom/verathon_bflex_calculator/css/verathon-bflex-calculator.css
@@ -4,53 +4,56 @@
     font-family: "Helvetica", "Arial", "Verdana", sans-serif;
 }
 
-#hero {
+body #bflex-calculator #hero {
     padding-top: 67px;
 }
 
-.heroListItem {
+body #bflex-calculator .heroListItem {
     margin: 0 20px 0 0;
     margin-bottom: 44px;
 }
 
-#hero .heroListItem img {
+body #bflex-calculator #hero .heroListItem img {
     margin-bottom: 21px;
 }
 
-#hero .heroListItem h3 {
+body #bflex-calculator #hero .heroListItem h3 {
     font-size: 14px;
     font-weight: bold;
     margin: 0 0 12px 0;
 }
 
-#hero .heroListItem p {
+body #bflex-calculator #hero .heroListItem p {
     font-size: 12px;
     margin-bottom: 0px;
     line-height: 16px;
     max-width: 516px;
 }
 
-.blueBackground {
+body #bflex-calculator .blueBackground {
     background-color: #003C71;
     color: #fff;
     width: 100%;
 }
 
-.blueBackground .container {
+body #bflex-calculator .blueBackground .container {
     display: block;
     padding: 0 30px 0 30px;
 }
 
-.linkWrapper {
+body #bflex-calculator .linkWrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
 }
 
-.scroll {
+body #bflex-calculator .scroll {
     text-transform: uppercase;
 }
 
-#hero h1 {
+body #bflex-calculator #hero h1 {
     font-weight: bold;
     font-size: 32px;
     color: #fff;
@@ -58,7 +61,7 @@
     max-width: 516pxl;
 }
 
-#hero p.heroHeadDescription {
+body #bflex-calculator #hero p.heroHeadDescription {
     font-weight: bold;
     font-size: 18px;
     margin: 0 0 16px 0;
@@ -67,7 +70,7 @@
     color: #fff;
 }
 
-#hero p {
+body #bflex-calculator #hero p {
     font-size: 16px;
     margin-bottom: 59px;
     line-height: 20px;
@@ -75,62 +78,65 @@
     color: #fff;
 }
 
-#hero h2 {
+body #bflex-calculator #hero h2 {
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 39px;
 }
 
-#hero nav.scroll {
+body #bflex-calculator #hero nav.scroll {
     text-transform: uppercase;
     font-size: 10px;
     margin-bottom: 28px;
 }
 
-#hero nav.scroll img {
+body #bflex-calculator #hero nav.scroll img {
     margin-right: 15px;
 }
 
-.linkwrapper {
+body #bflex-calculator .linkwrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
 }
 
-img {
+body #bflex-calculator img {
     max-width: 100%;
     height: auto;
 }
 
-.step {
+body #bflex-calculator .step {
     margin-top: 50px;
     border-bottom: 1px solid #D8D8D8;
     padding: 39px 0;
 }
 
-.container,
-.stepHead {
+body #bflex-calculator .container,
+body #bflex-calculator .stepHead {
     max-width: 768px;
     margin: 0 auto;
 }
 
-.stepHead {
+body #bflex-calculator .stepHead {
     font-size: 14px;
     position: relative;
     left: 12px;
 }
 
-.stepHead span {
+body #bflex-calculator .stepHead span {
     color: #003C71;
 }
 
-h2 {
+body #bflex-calculator h2 {
     font-weight: bold;
     font-size: 24px;
     margin-bottom: 24px;
     /* max-width: 342px; */
 }
 
-p {
+body #bflex-calculator p {
     font-size: 16px;
     line-height: 22px;
     color: #424142;
@@ -138,14 +144,14 @@ p {
     margin-bottom: 17px;
 }
 
-.footnote {
+body #bflex-calculator .footnote {
     font-size: 10px;
     color: #003C71;
     line-height: 12px;
     margin-bottom: 13px;
 }
 
-.question .error {
+body #bflex-calculator .question .error {
     background-color: #D11E39;
     width: 86%;
     font-size: 14px;
@@ -155,82 +161,91 @@ p {
     display: none;
 }
 
-.container {
+body #bflex-calculator .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin-top: 10px;
 }
 
-.row {
+body #bflex-calculator .row {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin: 5px 0;
 }
 
-.question {
+body #bflex-calculator .question {
     max-width: 366px;
     margin-bottom: 25px;
 }
 
-.right,
-.left {
+body #bflex-calculator .right,
+body #bflex-calculator .left {
     width: 50%;
     padding: 0 12px;
 }
 
-#logo-hide img {
+body #bflex-calculator #logo-hide img {
     margin-top: 56px;
 }
 
-.tooktipTextBoxWrapper {
+body #bflex-calculator .tooktipTextBoxWrapper {
     display: none;
 }
 
-.active {
+body #bflex-calculator .active {
     display: block !important;
 }
 
-.column1 {
-    width: 66%;
+body #bflex-calculator .column1 {
+    width: 58%;
 }
 
-.column2 {
-    width: 17%;
+body #bflex-calculator .column2 {
+    width: 25%;
     margin: 0 auto;
 }
 
-.column2 div {
+body #bflex-calculator .column2 div {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
 }
 
-.column3 {
+body #bflex-calculator .column3 {
     width: 17%;
     padding-left: 10px;
 }
 
-.column50 {
+body #bflex-calculator .column50 {
     width: 50%;
 }
 
-.column100 {
+body #bflex-calculator .column100 {
     width: 100%;
 }
 
-.column50 ul li {
+body #bflex-calculator .column50 ul li {
     font-size: 12px;
     line-height: 18px;
     color: #424142;
 }
 
-p.smaller {
+body #bflex-calculator p.smaller {
     font-size: 12px;
     line-height: 18px;
 }
 
-.heading {
+body #bflex-calculator .heading {
     font-size: 14px;
+    text-transform: none;
 }
 
-.question .slider {
+body #bflex-calculator .question .slider {
     -webkit-appearance: none;
     width: 100%;
     height: 2px;
@@ -240,10 +255,11 @@ p.smaller {
     outline: none;
     opacity: 0.7;
     -webkit-transition: 0.2s;
+    -webkit-transition: opacity 0.2s;
     transition: opacity 0.2s;
 }
 
-input[type=range]::-webkit-slider-thumb {
+body #bflex-calculator input[type=range]::-webkit-slider-thumb {
     border: 2px solid #00BFB2;
     height: 15px;
     width: 15px;
@@ -253,8 +269,8 @@ input[type=range]::-webkit-slider-thumb {
     -webkit-appearance: none;
 }
 
-.question input[type=number],
-.question input[type=text] {
+body #bflex-calculator .question input[type=number],
+body #bflex-calculator .question input[type=text] {
     width: 86%;
     padding: 5px;
     background-color: #D8D8D8;
@@ -265,60 +281,63 @@ input[type=range]::-webkit-slider-thumb {
     -moz-appearance: textfield;
 }
 
-.question input[type=number]:focus,
-.question input[type=text]:focus {
+body #bflex-calculator .question input[type=number]:focus,
+body #bflex-calculator .question input[type=text]:focus {
     border: 0px;
     background-color: #00BFB2;
     color: #fff;
     outline: 0px;
 }
 
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
+body #bflex-calculator input::-webkit-outer-spin-button,
+body #bflex-calculator input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
 
-input[type=number] {
+body #bflex-calculator input[type=number] {
     -moz-appearance: textfield;
 }
 
-input.slider {
+body #bflex-calculator input.slider {
     width: 100%;
 }
 
-.question .sliderMinMax {
+body #bflex-calculator .question .sliderMinMax {
     font-size: 10px;
     color: #7c7c7c;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
     margin-top: 7px;
 }
 
-.max {
+body #bflex-calculator .max {
     text-align: right;
 }
 
-.min,
-.max,
-.mid {
+body #bflex-calculator .min,
+body #bflex-calculator .max,
+body #bflex-calculator .mid {
     width: 33.3%;
-
 }
 
-.mid {
+body #bflex-calculator .mid {
     text-align: center;
 }
 
-.min {
+body #bflex-calculator .min {
     text-align: left;
 }
 
-.tooltip-icon {
+body #bflex-calculator .tooltip-icon {
     cursor: pointer;
 }
 
-.question .tip-arrow {
+body #bflex-calculator .question .tip-arrow {
     height: 8px;
     text-align: right;
     width: 17%;
@@ -327,18 +346,18 @@ input.slider {
     top: -7px;
 }
 
-label {
+body #bflex-calculator label {
     display: inline-block;
     margin-bottom: 9px;
 }
 
-.question .tip-arrow img {
+body #bflex-calculator .question .tip-arrow img {
     display: block;
     /* float: right;
-            margin-right: 18px; */
+                margin-right: 18px; */
 }
 
-.question .tip {
+body #bflex-calculator .question .tip {
     background-color: #003C71;
     color: #fff;
     padding: 18px;
@@ -346,39 +365,39 @@ label {
     line-height: 18px;
 }
 
-.column2 {
+body #bflex-calculator .column2 {
     padding: 0 12px;
 }
 
-.numberInput {
-    width: 85%;
+body #bflex-calculator .numberInput {
+    width: 82%;
 }
 
-.unit {
-    width: 2%;
+body #bflex-calculator .unit {
+    width: 5%;
     text-align: right;
     padding: 5px;
 }
 
-.captions {
+body #bflex-calculator .captions {
     font-size: 16px;
     line-height: 18px;
     color: #424142;
     margin-bottom: 10px;
 }
 
-.statisticFigure {
+body #bflex-calculator .statisticFigure {
     color: #00BFB2;
     font-size: 32px;
     margin: 0;
     margin-bottom: 30px;
 }
 
-.statisticFigure:last-child {
+body #bflex-calculator .statisticFigure:last-child {
     margin-bottom: 0px;
 }
 
-.right .output {
+body #bflex-calculator .right .output {
     margin-top: 34px;
     font-size: 24px;
     line-height: 28px;
@@ -386,20 +405,20 @@ label {
     text-align: center;
 }
 
-.right .output span {
+body #bflex-calculator .right .output span {
     color: #00BFB2;
 }
 
-.submitSectionWrapper {
+body #bflex-calculator .submitSectionWrapper {
     width: 100%;
     padding: 40px 0 40px 0;
 }
 
-.submitSectionWrapper .container {
+body #bflex-calculator .submitSectionWrapper .container {
     display: block;
 }
 
-.submitSectionWrapper button {
+body #bflex-calculator .submitSectionWrapper input {
     background-color: #003C71;
     color: #fff;
     font-size: 15px;
@@ -411,66 +430,67 @@ label {
     padding: 13px;
 }
 
-.submitSectionWrapper .column50 {
+body #bflex-calculator .submitSectionWrapper .column50 {
     padding-right: 12px;
     padding-left: 12px;
 }
 
-.submitSectionWrapper h3 {
+body #bflex-calculator .submitSectionWrapper h3 {
     font-size: 26px;
     margin: 0px;
 }
 
 @media screen and (max-width: 767px) {
-    .container {
+    body #bflex-calculator .container {
+        -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     }
 
-    .column50 {
+    body #bflex-calculator .column50 {
         width: 100%;
     }
 
-    .submitSectionWrapper .row {
+    body #bflex-calculator .submitSectionWrapper .row {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -ms-flex-wrap: wrap;
         flex-wrap: wrap;
         width: 100%;
     }
 
-    .submitSectionWrapper .container {
+    body #bflex-calculator .submitSectionWrapper .container {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     }
 
-    .submitSectionWrapper button {
+    body #bflex-calculator .submitSectionWrapper button {
         margin-top: 10px;
     }
 
-    .container {
+    body #bflex-calculator .container {
         padding: 0 30px 0 30px;
     }
 
-    .stepHead {
+    body #bflex-calculator .stepHead {
         margin: 0 30px 24px 20px;
     }
 
-    .left,
-    .right {
+    body #bflex-calculator .left,
+    body #bflex-calculator .right {
         width: 100%;
         padding: 0px;
     }
-
-}
-
-
-* {
-    margin: 0;
-    padding: 0;
-    font-family: "Helvetica", "Arial", "Verdana", sans-serif;
 }
 
 .container {
     max-width: 768px;
     margin: 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin-top: 10px;
 }
@@ -478,6 +498,8 @@ label {
 .results-page-hero .row,
 .results .row,
 .results-page-footer-ribbon .row {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width: 100%;
     margin: 0px;
@@ -546,7 +568,8 @@ p {
 
 .ribbon-wrapper {
     width: 100%;
-    box-shadow: 0px 5px 4px 0px rgb(0 0 0 / 10%);
+    -webkit-box-shadow: 0px 5px 4px 0px black;
+    box-shadow: 0px 5px 4px 0px black;
     padding: 28px 0 28px 0;
 }
 
@@ -568,12 +591,12 @@ p {
     margin-bottom: 0px;
 }
 
-
 /* result-section */
-
-
 .result-section {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
 }
 
@@ -637,12 +660,16 @@ p.value {
 }
 
 .row.result {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
 }
 
 .result .row>* {
     padding: 0px 15px;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 
@@ -674,10 +701,7 @@ hr:not([size]) {
     display: block !important;
 }
 
-
-
 /* blue-footer-ribbon */
-
 .blueBackground .footer .right,
 .blueBackground .footer .left {
     padding: 0px;
@@ -692,6 +716,8 @@ hr:not([size]) {
 }
 
 .blueBackground .footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
@@ -706,10 +732,7 @@ hr:not([size]) {
     font-size: 18px;
 }
 
-
 /* layout */
-
-
 .column6 {
     width: 50%;
 }
@@ -730,10 +753,7 @@ hr:not([size]) {
     float: right;
 }
 
-
-
 /* responsiveness */
-
 @media screen and (max-width: 768px) {
 
     .column7,
@@ -742,45 +762,49 @@ hr:not([size]) {
     }
 
     .results-page-hero .blueBackground .container {
-        padding-right: 30px;
-        padding-left: 30px;
-    }
-
-    .blueBackground .footer {
-        padding-right: 12px;
-        padding-left: 12px;
-    }
-
-    .blueBackground .container .column6 {
-        padding: 0px 12px;
-    }
-
-    .row.result.reprocessing .column5 {
-        width: 41.6%;
-    }
-
-    .row.result.reprocessing .column7 {
-        width: 58.3%;
-    }
-
-    .row.result.reprocessing .float {
-        float: right;
-    }
-
-    .float {
-        float: left;
-    }
-
-    .results-page-hero .row,
-    .results .row,
-    .results-page-footer-ribbon .row {
-        flex-wrap: wrap;
-    }
-
-    .results-page-hero .container,
-    .results.container,
-    .results-page-footer-ribbon .container {
-        padding: 0px;
-        flex-wrap: nowrap;
-    }
+    padding-right: 30px;
+    padding-left: 30px;
 }
+
+.blueBackground .footer {
+    padding-right: 12px;
+    padding-left: 12px;
+}
+
+.blueBackground .container .column6 {
+    padding: 0px 12px;
+}
+
+.row.result.reprocessing .column5 {
+    width: 41.6%;
+}
+
+.row.result.reprocessing .column7 {
+    width: 58.3%;
+}
+
+.row.result.reprocessing .float {
+    float: right;
+}
+
+.float {
+    float: left;
+}
+
+.results-page-hero .row,
+.results .row,
+.results-page-footer-ribbon .row {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+}
+
+.results-page-hero .container,
+.results.container,
+.results-page-footer-ribbon .container {
+    padding: 0px;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+}
+}
+
+/*# sourceMappingURL=flex.css.map */
