--- a/docroot/modules/custom/verathon_bflex_calculator/css/verathon-bflex-calculator.css
+++ b/docroot/modules/custom/verathon_bflex_calculator/css/verathon-bflex-calculator.css
@@ -4,56 +4,53 @@
     font-family: "Helvetica", "Arial", "Verdana", sans-serif;
 }
 
-body #bflex-calculator #hero {
+#hero {
     padding-top: 67px;
 }
 
-body #bflex-calculator .heroListItem {
+.heroListItem {
     margin: 0 20px 0 0;
     margin-bottom: 44px;
 }
 
-body #bflex-calculator #hero .heroListItem img {
+#hero .heroListItem img {
     margin-bottom: 21px;
 }
 
-body #bflex-calculator #hero .heroListItem h3 {
+#hero .heroListItem h3 {
     font-size: 14px;
     font-weight: bold;
     margin: 0 0 12px 0;
 }
 
-body #bflex-calculator #hero .heroListItem p {
+#hero .heroListItem p {
     font-size: 12px;
     margin-bottom: 0px;
     line-height: 16px;
     max-width: 516px;
 }
 
-body #bflex-calculator .blueBackground {
+.blueBackground {
     background-color: #003C71;
     color: #fff;
     width: 100%;
 }
 
-body #bflex-calculator .blueBackground .container {
+.blueBackground .container {
     display: block;
     padding: 0 30px 0 30px;
 }
 
-body #bflex-calculator .linkWrapper {
-    display: -webkit-box;
-    display: -ms-flexbox;
+.linkWrapper {
     display: flex;
-    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
 }
 
-body #bflex-calculator .scroll {
+.scroll {
     text-transform: uppercase;
 }
 
-body #bflex-calculator #hero h1 {
+#hero h1 {
     font-weight: bold;
     font-size: 32px;
     color: #fff;
@@ -61,7 +58,7 @@ body #bflex-calculator #hero h1 {
     max-width: 516pxl;
 }
 
-body #bflex-calculator #hero p.heroHeadDescription {
+#hero p.heroHeadDescription {
     font-weight: bold;
     font-size: 18px;
     margin: 0 0 16px 0;
@@ -70,7 +67,7 @@ body #bflex-calculator #hero p.heroHeadDescription {
     color: #fff;
 }
 
-body #bflex-calculator #hero p {
+#hero p {
     font-size: 16px;
     margin-bottom: 59px;
     line-height: 20px;
@@ -78,65 +75,62 @@ body #bflex-calculator #hero p {
     color: #fff;
 }
 
-body #bflex-calculator #hero h2 {
+#hero h2 {
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 39px;
 }
 
-body #bflex-calculator #hero nav.scroll {
+#hero nav.scroll {
     text-transform: uppercase;
     font-size: 10px;
     margin-bottom: 28px;
 }
 
-body #bflex-calculator #hero nav.scroll img {
+#hero nav.scroll img {
     margin-right: 15px;
 }
 
-body #bflex-calculator .linkwrapper {
-    display: -webkit-box;
-    display: -ms-flexbox;
+.linkwrapper {
     display: flex;
-    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
 }
 
-body #bflex-calculator img {
+img {
     max-width: 100%;
     height: auto;
 }
 
-body #bflex-calculator .step {
+.step {
     margin-top: 50px;
     border-bottom: 1px solid #D8D8D8;
     padding: 39px 0;
 }
 
-body #bflex-calculator .container,
-body #bflex-calculator .stepHead {
+.container,
+.stepHead {
     max-width: 768px;
     margin: 0 auto;
 }
 
-body #bflex-calculator .stepHead {
+.stepHead {
     font-size: 14px;
     position: relative;
     left: 12px;
 }
 
-body #bflex-calculator .stepHead span {
+.stepHead span {
     color: #003C71;
 }
 
-body #bflex-calculator h2 {
+h2 {
     font-weight: bold;
     font-size: 24px;
     margin-bottom: 24px;
     /* max-width: 342px; */
 }
 
-body #bflex-calculator p {
+p {
     font-size: 16px;
     line-height: 22px;
     color: #424142;
@@ -144,14 +138,14 @@ body #bflex-calculator p {
     margin-bottom: 17px;
 }
 
-body #bflex-calculator .footnote {
+.footnote {
     font-size: 10px;
     color: #003C71;
     line-height: 12px;
     margin-bottom: 13px;
 }
 
-body #bflex-calculator .question .error {
+.question .error {
     background-color: #D11E39;
     width: 86%;
     font-size: 14px;
@@ -161,91 +155,82 @@ body #bflex-calculator .question .error {
     display: none;
 }
 
-body #bflex-calculator .container {
-    display: -webkit-box;
-    display: -ms-flexbox;
+.container {
     display: flex;
     margin-top: 10px;
 }
 
-body #bflex-calculator .row {
-    display: -webkit-box;
-    display: -ms-flexbox;
+.row {
     display: flex;
     margin: 5px 0;
 }
 
-body #bflex-calculator .question {
+.question {
     max-width: 366px;
     margin-bottom: 25px;
 }
 
-body #bflex-calculator .right,
-body #bflex-calculator .left {
+.right,
+.left {
     width: 50%;
     padding: 0 12px;
 }
 
-body #bflex-calculator #logo-hide img {
+#logo-hide img {
     margin-top: 56px;
 }
 
-body #bflex-calculator .tooktipTextBoxWrapper {
+.tooktipTextBoxWrapper {
     display: none;
 }
 
-body #bflex-calculator .active {
+.active {
     display: block !important;
 }
 
-body #bflex-calculator .column1 {
-    width: 58%;
+.column1 {
+    width: 66%;
 }
 
-body #bflex-calculator .column2 {
-    width: 25%;
+.column2 {
+    width: 17%;
     margin: 0 auto;
 }
 
-body #bflex-calculator .column2 div {
-    display: -webkit-box;
-    display: -ms-flexbox;
+.column2 div {
     display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
 }
 
-body #bflex-calculator .column3 {
+.column3 {
     width: 17%;
     padding-left: 10px;
 }
 
-body #bflex-calculator .column50 {
+.column50 {
     width: 50%;
 }
 
-body #bflex-calculator .column100 {
+.column100 {
     width: 100%;
 }
 
-body #bflex-calculator .column50 ul li {
+.column50 ul li {
     font-size: 12px;
     line-height: 18px;
     color: #424142;
 }
 
-body #bflex-calculator p.smaller {
+p.smaller {
     font-size: 12px;
     line-height: 18px;
 }
 
-body #bflex-calculator .heading {
+.heading {
     font-size: 14px;
-    text-transform: none;
 }
 
-body #bflex-calculator .question .slider {
+.question .slider {
     -webkit-appearance: none;
     width: 100%;
     height: 2px;
@@ -255,11 +240,10 @@ body #bflex-calculator .question .slider {
     outline: none;
     opacity: 0.7;
     -webkit-transition: 0.2s;
-    -webkit-transition: opacity 0.2s;
     transition: opacity 0.2s;
 }
 
-body #bflex-calculator input[type=range]::-webkit-slider-thumb {
+input[type=range]::-webkit-slider-thumb {
     border: 2px solid #00BFB2;
     height: 15px;
     width: 15px;
@@ -269,8 +253,8 @@ body #bflex-calculator input[type=range]::-webkit-slider-thumb {
     -webkit-appearance: none;
 }
 
-body #bflex-calculator .question input[type=number],
-body #bflex-calculator .question input[type=text] {
+.question input[type=number],
+.question input[type=text] {
     width: 86%;
     padding: 5px;
     background-color: #D8D8D8;
@@ -281,63 +265,60 @@ body #bflex-calculator .question input[type=text] {
     -moz-appearance: textfield;
 }
 
-body #bflex-calculator .question input[type=number]:focus,
-body #bflex-calculator .question input[type=text]:focus {
+.question input[type=number]:focus,
+.question input[type=text]:focus {
     border: 0px;
     background-color: #00BFB2;
     color: #fff;
     outline: 0px;
 }
 
-body #bflex-calculator input::-webkit-outer-spin-button,
-body #bflex-calculator input::-webkit-inner-spin-button {
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
 
-body #bflex-calculator input[type=number] {
+input[type=number] {
     -moz-appearance: textfield;
 }
 
-body #bflex-calculator input.slider {
+input.slider {
     width: 100%;
 }
 
-body #bflex-calculator .question .sliderMinMax {
+.question .sliderMinMax {
     font-size: 10px;
     color: #7c7c7c;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
     justify-content: space-between;
     margin-top: 7px;
 }
 
-body #bflex-calculator .max {
+.max {
     text-align: right;
 }
 
-body #bflex-calculator .min,
-body #bflex-calculator .max,
-body #bflex-calculator .mid {
+.min,
+.max,
+.mid {
     width: 33.3%;
+
 }
 
-body #bflex-calculator .mid {
+.mid {
     text-align: center;
 }
 
-body #bflex-calculator .min {
+.min {
     text-align: left;
 }
 
-body #bflex-calculator .tooltip-icon {
+.tooltip-icon {
     cursor: pointer;
 }
 
-body #bflex-calculator .question .tip-arrow {
+.question .tip-arrow {
     height: 8px;
     text-align: right;
     width: 17%;
@@ -346,18 +327,18 @@ body #bflex-calculator .question .tip-arrow {
     top: -7px;
 }
 
-body #bflex-calculator label {
+label {
     display: inline-block;
     margin-bottom: 9px;
 }
 
-body #bflex-calculator .question .tip-arrow img {
+.question .tip-arrow img {
     display: block;
     /* float: right;
-                margin-right: 18px; */
+            margin-right: 18px; */
 }
 
-body #bflex-calculator .question .tip {
+.question .tip {
     background-color: #003C71;
     color: #fff;
     padding: 18px;
@@ -365,39 +346,39 @@ body #bflex-calculator .question .tip {
     line-height: 18px;
 }
 
-body #bflex-calculator .column2 {
+.column2 {
     padding: 0 12px;
 }
 
-body #bflex-calculator .numberInput {
-    width: 82%;
+.numberInput {
+    width: 85%;
 }
 
-body #bflex-calculator .unit {
-    width: 5%;
+.unit {
+    width: 2%;
     text-align: right;
     padding: 5px;
 }
 
-body #bflex-calculator .captions {
+.captions {
     font-size: 16px;
     line-height: 18px;
     color: #424142;
     margin-bottom: 10px;
 }
 
-body #bflex-calculator .statisticFigure {
+.statisticFigure {
     color: #00BFB2;
     font-size: 32px;
     margin: 0;
     margin-bottom: 30px;
 }
 
-body #bflex-calculator .statisticFigure:last-child {
+.statisticFigure:last-child {
     margin-bottom: 0px;
 }
 
-body #bflex-calculator .right .output {
+.right .output {
     margin-top: 34px;
     font-size: 24px;
     line-height: 28px;
@@ -405,20 +386,20 @@ body #bflex-calculator .right .output {
     text-align: center;
 }
 
-body #bflex-calculator .right .output span {
+.right .output span {
     color: #00BFB2;
 }
 
-body #bflex-calculator .submitSectionWrapper {
+.submitSectionWrapper {
     width: 100%;
     padding: 40px 0 40px 0;
 }
 
-body #bflex-calculator .submitSectionWrapper .container {
+.submitSectionWrapper .container {
     display: block;
 }
 
-body #bflex-calculator .submitSectionWrapper input {
+.submitSectionWrapper button {
     background-color: #003C71;
     color: #fff;
     font-size: 15px;
@@ -430,67 +411,66 @@ body #bflex-calculator .submitSectionWrapper input {
     padding: 13px;
 }
 
-body #bflex-calculator .submitSectionWrapper .column50 {
+.submitSectionWrapper .column50 {
     padding-right: 12px;
     padding-left: 12px;
 }
 
-body #bflex-calculator .submitSectionWrapper h3 {
+.submitSectionWrapper h3 {
     font-size: 26px;
     margin: 0px;
 }
 
 @media screen and (max-width: 767px) {
-    body #bflex-calculator .container {
-        -ms-flex-wrap: wrap;
+    .container {
         flex-wrap: wrap;
     }
 
-    body #bflex-calculator .column50 {
+    .column50 {
         width: 100%;
     }
 
-    body #bflex-calculator .submitSectionWrapper .row {
-        display: -webkit-box;
-        display: -ms-flexbox;
+    .submitSectionWrapper .row {
         display: flex;
-        -ms-flex-wrap: wrap;
         flex-wrap: wrap;
         width: 100%;
     }
 
-    body #bflex-calculator .submitSectionWrapper .container {
-        display: -webkit-box;
-        display: -ms-flexbox;
+    .submitSectionWrapper .container {
         display: flex;
-        -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     }
 
-    body #bflex-calculator .submitSectionWrapper button {
+    .submitSectionWrapper button {
         margin-top: 10px;
     }
 
-    body #bflex-calculator .container {
+    .container {
         padding: 0 30px 0 30px;
     }
 
-    body #bflex-calculator .stepHead {
+    .stepHead {
         margin: 0 30px 24px 20px;
     }
 
-    body #bflex-calculator .left,
-    body #bflex-calculator .right {
+    .left,
+    .right {
         width: 100%;
         padding: 0px;
     }
+
+}
+
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: "Helvetica", "Arial", "Verdana", sans-serif;
 }
 
 .container {
     max-width: 768px;
     margin: 0 auto;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     margin-top: 10px;
 }
@@ -498,8 +478,6 @@ body #bflex-calculator .submitSectionWrapper h3 {
 .results-page-hero .row,
 .results .row,
 .results-page-footer-ribbon .row {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     width: 100%;
     margin: 0px;
@@ -568,8 +546,7 @@ p {
 
 .ribbon-wrapper {
     width: 100%;
-    -webkit-box-shadow: 0px 5px 4px 0px black;
-    box-shadow: 0px 5px 4px 0px black;
+    box-shadow: 0px 5px 4px 0px rgb(0 0 0 / 10%);
     padding: 28px 0 28px 0;
 }
 
@@ -591,12 +568,12 @@ p {
     margin-bottom: 0px;
 }
 
+
 /* result-section */
+
+
 .result-section {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
 }
 
@@ -660,16 +637,12 @@ p.value {
 }
 
 .row.result {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
 }
 
 .result .row>* {
     padding: 0px 15px;
-    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 
@@ -701,7 +674,10 @@ hr:not([size]) {
     display: block !important;
 }
 
+
+
 /* blue-footer-ribbon */
+
 .blueBackground .footer .right,
 .blueBackground .footer .left {
     padding: 0px;
@@ -716,8 +692,6 @@ hr:not([size]) {
 }
 
 .blueBackground .footer {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
 }
 
@@ -732,7 +706,10 @@ hr:not([size]) {
     font-size: 18px;
 }
 
+
 /* layout */
+
+
 .column6 {
     width: 50%;
 }
@@ -753,7 +730,10 @@ hr:not([size]) {
     float: right;
 }
 
+
+
 /* responsiveness */
+
 @media screen and (max-width: 768px) {
 
     .column7,
@@ -762,49 +742,45 @@ hr:not([size]) {
     }
 
     .results-page-hero .blueBackground .container {
-    padding-right: 30px;
-    padding-left: 30px;
-}
+        padding-right: 30px;
+        padding-left: 30px;
+    }
 
-.blueBackground .footer {
-    padding-right: 12px;
-    padding-left: 12px;
-}
+    .blueBackground .footer {
+        padding-right: 12px;
+        padding-left: 12px;
+    }
 
-.blueBackground .container .column6 {
-    padding: 0px 12px;
-}
+    .blueBackground .container .column6 {
+        padding: 0px 12px;
+    }
 
-.row.result.reprocessing .column5 {
-    width: 41.6%;
-}
+    .row.result.reprocessing .column5 {
+        width: 41.6%;
+    }
 
-.row.result.reprocessing .column7 {
-    width: 58.3%;
-}
+    .row.result.reprocessing .column7 {
+        width: 58.3%;
+    }
 
-.row.result.reprocessing .float {
-    float: right;
-}
+    .row.result.reprocessing .float {
+        float: right;
+    }
 
-.float {
-    float: left;
-}
+    .float {
+        float: left;
+    }
 
-.results-page-hero .row,
-.results .row,
-.results-page-footer-ribbon .row {
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-}
+    .results-page-hero .row,
+    .results .row,
+    .results-page-footer-ribbon .row {
+        flex-wrap: wrap;
+    }
 
-.results-page-hero .container,
-.results.container,
-.results-page-footer-ribbon .container {
-    padding: 0px;
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
+    .results-page-hero .container,
+    .results.container,
+    .results-page-footer-ribbon .container {
+        padding: 0px;
+        flex-wrap: nowrap;
+    }
 }
-}
-
-/*# sourceMappingURL=flex.css.map */
