Adding css and js files for static image hotspot

--- a/docroot/modules/custom/verathon_customization/css/custom-h5p-overrides.css
+++ b/docroot/modules/custom/verathon_customization/css/custom-h5p-overrides.css
@@ -1,1 +1,38 @@
-.h5p-image-hotspot{ border: 5px solid blue !important; }
+/* Comments will be removed after design is finalised by client */
+.h5p-content-controls {
+  display: none;
+}
+/* .h5p-image-hotspot-popup::before {
+    content: url("../assets/line.png");
+    height: fit-content;
+} */
+.h5p-image-hotspot-popup {
+  max-width: 30%;
+  padding: 0;
+}
+.h5p-image-hotspot-has-header .h5p-image-hotspot-popup-body {
+  padding: 0;
+}
+.h5p-image-hotspot-popup-body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+}
+.h5p-image-hotspot-popup-body .h5p-text {
+  padding: 52px;
+  max-width: 50%;
+}
+
+/* .h5p-image-hotspot-popup {
+    display: flex;
+    flex-direction: row-reverse;
+    background-color: transparent;
+    box-shadow: none;
+    height: auto;
+    max-width: 50%;
+    padding: 0;
+  }
+.h5p-image-hotspot-popup-content, .h5p-image {
+    background-color: white;
+} */
