Changing the text from theme to calculated values.

--- a/docroot/modules/custom/verathon_bflex_calculator/templates/pdf--verathon-bflex-calculator--page1.html.twig
+++ b/docroot/modules/custom/verathon_bflex_calculator/templates/pdf--verathon-bflex-calculator--page1.html.twig
@@ -70,9 +70,9 @@
     <div class="pdf_intro">
       <p style="font-size: 3.125rem;line-height: 4.0625rem;color: #003C71;">
         <span class="boldText">Your Cost-Comparison
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      Snapshot</span>:Single-use vs. reusable bronchoscopes</p>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          Snapshot</span>:Single-use vs. reusable bronchoscopes</p>
       <p class="pdf_intro_footnote">See how current operating costs for reusable bronchoscopes at
-        <span class="boldText">sdfsdf</span>
+        <span class="boldText">{{request}}</span>
         compare to single-use.</p>
     </div>
     <div class="img-wrap verathon-logo"></div>
